# zvte

./: .gitignore  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml  config.h  zvte.c  zvte.desktop  zvte.terminfo
